--- a/NotebookForMe/NotebookForMe/NotebookForMe.csproj
+++ b/NotebookForMe/NotebookForMe/NotebookForMe.csproj
@@ -100,6 +100,8 @@
     </Compile>
     <Compile Include="Model\MovieItem.cs" />
     <Compile Include="Model\MusicItem.cs" />
+    <Compile Include="Model\Utils\MobileConnection.cs" />
+    <Compile Include="Model\Utils\Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
